[#77] Add MoreCollectors.mapping/filtering/flatMapping with default downstream